# cpp-producerconsumer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
doc/: index.html
include/: buffer.h  consumer.h  producer.h
src/: buffer.cpp  consumer.cpp  producer.cpp
